src/ExamplePrint.atg

COMPILER Grammar

private Printer printer;

public Parser(Scanner s, Printer p) {
       this(s);
       this.printer = p;
}

CHARACTERS

TOKENS

PRODUCTIONS

    Grammar		(. printer.startProduction("Grammar"); .)
	=
	T {("+"         (. printer.print("+"); .)
	|"-"		(. printer.print("-"); .)
	) T}
	EOF		(. printer.endProduction(); .)
    .

    T			(. printer.startProduction("T"); .)
	=
	["-"		(. printer.print("-"); .)
	]
	B		(. printer.endProduction(); .)
    .

    B			(. printer.startProduction("B"); .)
	=
	"0"		(. printer.print("0"); printer.endProduction(); .)
	| "1"		(. printer.print("1"); printer.endProduction(); .)
    .

END Grammar.
